fix spacing at the top of friends list for mobile (remove whitespace)

--- a/app/assets/stylesheets/mobile/_user.sass
+++ b/app/assets/stylesheets/mobile/_user.sass
@@ -262,7 +262,7 @@ article.profile
     background: #D30000 image-url("friend-request-sprite.png") no-repeat center -129px
 
   .friend-directory
-    margin: 30px 0 0
+    margin: 0
     overflow: hidden
     clear: both
 
